feat: copy code, 6 digit codes, toast

--- a/src/index.css
+++ b/src/index.css
@@ -51,4 +51,9 @@ body {
 	font-size: 3rem;
 	font-family: monospace;
 	color: #ca2c92;
+
+	&:hover {
+		cursor: pointer;
+		color: #ca2c93ca;
+	}
 }
